# Basket

./: .gitignore  .gitmodules  Basket.js  Basket.py  CLAUDE.md  Makefile  README.md  instalar.md  package-lock.json  package.json  pyproject.toml  requiraments.txt  requirements.txt  setup.py
000_Nombre_Video/1.Guion/: 2.SEO.md  3.Texto.md  5.Link.md  6.Piesas.md  GuionViejo.md  Indice.md  InfoProyecto.md  Link.md  TextoParaCompartir.md
02.CajaDomotica_Fija/: CajaDomotica_Fija.fzz
Data/: 1.info.md  TextoExtra.md  link.md
Guion/: General.md  Indice.md  Link.md  TextoParaCompartir.md
extra/: FuncionesArchivos.py  SubProceso.py
operaciones/: OperacionesBlender.py  OperacionesFolder.py  OperacionesPantillas.py
src/MisFunciones/: FuncionesBotTelegram.py
src/basket/: main.py
src/basket/extra/: SubProceso.py
src/basket/operaciones/: IconoFolder.py  Miembros.py  OperacionesBlender.py  Pantillas.py  Video.py  __init__.py  convertir.py  graficaSun.py  presente.py  subtitulo.py  subtitulos.py  usuario.py
src/extra/: FuncionesArchivos.py  MiCharBot.py
src/operaciones/: IconoFolder.py  Miembros.py  OperacionesBlender.py  Pantillas.py  Video.py  __init__.py  asistencia.py  graficaSun.py  presente.py
